Deployment/Kubernetes/Result/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    tags: voting-application
spec:
  type: ClusterIP
  selector:
    app: result-app
  ports:
  - port: 80
    targetPort: 80
