Deployment/Kubernetes/Result/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/websocket-services: "result-service"
  name: result-ig
spec:
  ingressClassName: nginx
  rules:
  - host: jen-kube.tenant703257.ibdp.calibo.com
    http:
      paths:
      - backend:
          service:
            name: result-service
            port:
              number: 80
        path: /result/(.*)
        pathType: ImplementationSpecific

      - backend:
          service:
            name: result-service
            port:
              number: 80
        path: /socket.io/(.*)
        pathType: ImplementationSpecific
